--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,17 +1,11 @@
 FROM node:10-alpine
 
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+WORKDIR /usr/src/app
 
-WORKDIR /home/node/app
-
-COPY . .
-
-USER node
+COPY package*.json ./
 
 RUN npm install
-
-COPY --chown=node:node . .
+COPY . .
 
 EXPOSE 3001
-
 CMD [ "node", "index.js" ]
