--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
 
   db:
     image: postgres:11.2-alpine
+    ports: ["5432"]
     environment:
       POSTGRES_USER: demo_user
       POSTGRES_PASSWORD: demo_user
